--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </style>
 </head>
 <body class="font-roboto">
-    <header class="bg-[#FFFBF0] pl-4">
+    <header class="bg-[#FFFBF0] pl-4 h-[700px]">
         <nav>
 
         </nav>
@@ -76,6 +76,53 @@
                  <div class="p-5 rounded-3xl space-y-4 drop-shadow-lg">
                     <img src="images/jacket-3.png" class="p-5 rounded-3xl bg-[#F1F1F1]" alt="">
                     <h4 class="text-[#363958] font-bold text-base">Woman Leather Jacket</h4>
+                    <p>Lorem Ipsum is simply dummy text of the <br> 
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <h1 class="text-[#FABE4C] text-3xl font-extrabold">$234</h1>
+                        <button class="px-8 py-4 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg flex gap-1 text-white"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg>
+                          BUY NOW</button>
+                    </div>
+                 </div>
+             </div>
+         </section>
+         <!-- Man Jacket section -->
+         <section class="mt-10 mb-10">
+            <h1 class="font-bebas text-5xl text-[#363958] mb-5">man Jacket</h1>
+            <!-- Jacket card container -->
+             <div class="grid grid-cols-1 lg:grid-cols-3">
+                <!-- Jacket card -->
+                 <div class="p-5 rounded-3xl space-y-4 drop-shadow-lg">
+                    <img src="images/jacket-4.png" class="p-5 rounded-3xl bg-[#F1F1F1]" alt="">
+                    <h4 class="text-[#363958] font-bold text-base">Snowboard Jacket Mens</h4>
+                    <p>Lorem Ipsum is simply dummy text of the <br> 
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <h1 class="text-[#FABE4C] text-3xl font-extrabold">$234</h1>
+                        <button class="px-8 py-4 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg flex gap-1 text-white"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg>
+                          BUY NOW</button>
+                    </div>
+                 </div>
+                 <div class="p-5 rounded-3xl space-y-4 drop-shadow-lg">
+                    <img src="images/jacket-5.png" class="p-5 rounded-3xl bg-[#F1F1F1]" alt="">
+                    <h4 class="text-[#363958] font-bold text-base">Man Leather Jackets</h4>
+                    <p>Lorem Ipsum is simply dummy text of the <br> 
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <h1 class="text-[#FABE4C] text-3xl font-extrabold">$234</h1>
+                        <button class="px-8 py-4 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg flex gap-1 text-white"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg>
+                          BUY NOW</button>
+                    </div>
+                 </div>
+                 <div class="p-5 rounded-3xl space-y-4 drop-shadow-lg">
+                    <img src="images/jacket-6.png" class="p-5 rounded-3xl bg-[#F1F1F1]" alt="">
+                    <h4 class="text-[#363958] font-bold text-base">Man Casual Jacket</h4>
                     <p>Lorem Ipsum is simply dummy text of the <br> 
                         printing and typesetting industry.</p>
                     <div class="flex justify-between items-center">
